bt tao form don gian

--- a/ss04_git_html/exercise/taoformtimkiemgg.html
+++ b/ss04_git_html/exercise/taoformtimkiemgg.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <form action="https://www.google.com/" >
+        <input type="text" name="q">
+        <input type="submit" name="timkiem" value="Tim Kiem">
+    </form>
 </body>
 </html>
