--- a/ss09_if_else_2/Practice/maytinhdongian.html
+++ b/ss09_if_else_2/Practice/maytinhdongian.html
@@ -4,12 +4,113 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        button {
+            width: 50px;
+            height: 50px;
+        }
+    </style>
 </head>
 <body>
     <form>
         <table>
-            
+            <table border="1" cellpadding="0" cellspacing="20">
+                <tr>
+                    <td colspan="4" style="height: 30px; text-align: right">
+                        <span id="result"></span>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <button type="button" onclick="calBasic('1')">1</button>
+                    </td>
+                    <td>
+                        <button type="button" onclick="calBasic('2')">2</button>
+                    </td>
+                    <td>
+                        <button type="button" onclick="calBasic('3')">3</button>
+                    </td>
+                    <td>
+                        <button type="button" onclick="calBasic('+')">+</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <button type="button" onclick="calBasic('4')">4</button>
+                    </td>
+                    <td>
+                        <button type="button" onclick="calBasic('5')">5</button>
+                    </td>
+                    <td>
+                        <button type="button" onclick="calBasic('6')">6</button>
+                    </td>
+                    <td>
+                        <button type="button" onclick="calBasic('-')">-</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <button type="button" onclick="calBasic('7')">7</button>
+                    </td>
+                    <td>
+                        <button type="button" onclick="calBasic('8')">8</button>
+                    </td>
+                    <td>
+                        <button type="button" onclick="calBasic('9')">9</button>
+                    </td>
+                    <td>
+                        <button type="button" onclick="calBasic('*')">X</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <button type="button" onclick="calBasic('c')">C</button>
+                    </td>
+                    <td>
+                        <button type="button" onclick="calBasic('0')">0</button>
+                    </td>
+                    <td>
+                        <button type="button" onclick="calBasic('=')">=</button>
+                    </td>
+                    <td>
+                        <button type="button" onclick="calBasic('/')">/</button>
+                    </td>
+                </tr>
+            </table>
         </table>
     </form>
+    <script>
+        function calBasic(x) {
+        let result = document.getElementById('result').innerText;
+        switch (x) {
+            case '0':
+            case '1':
+            case '2':
+            case '3':
+            case '4':
+            case '5':
+            case '6':
+            case '7':
+            case '8':
+            case '9':
+            case '+':
+            case '-':
+            case '*':
+            case '/':
+                //TH1 nối chuỗi
+                result = result + x;
+                break;
+            case '=':
+                //TH2 tính toán =
+                result = eval(result);
+                break;
+            case 'c':
+                //TH3 xóa C
+                result = '';
+                break;
+        }
+        document.getElementById('result').innerText = result;
+    }
+    </script>
 </body>
 </html>
