sua bai 06 mang 2

--- a/ss13_Mang_2/Practices/mang01_bai4.html
+++ b/ss13_Mang_2/Practices/mang01_bai4.html
@@ -15,7 +15,7 @@
             array.push(m)
         }
         let reverseArray = array.reverse()
-        console.log(array)
+        console.log(reverseArray)
     </script>
 </body>
 </html>
