--- a/ss13_Mang_2/Practices/mang02_bai3.html
+++ b/ss13_Mang_2/Practices/mang02_bai3.html
@@ -7,12 +7,11 @@
 </head>
 <body>
     <script>
-        let array =  [ 'c', 's', 'c', '2', '6', '1' ] 
+        let array =  [ 'c', 's', 'c', '2', '6', '1','5' ] 
         let count = 0 
         for ( i = 0 ; i < array.length ; i ++ ){
             if ( !isNaN(array[i])){
                 count += 1 
-
             }
         }
         console.log("Mảng : "+array)
