sua bai ham 2 bai 3

--- a/ss15_Ham_2/Practice/Ham02_bai3.html
+++ b/ss15_Ham_2/Practice/Ham02_bai3.html
@@ -16,7 +16,7 @@
         }
         let number = +prompt("Nhập số cần tính dai thừa")
         let outputTough = tough(number)
-        document.write("Giai thừa của "+ number + " là :"+outputTough)
+        document.write("dai thừa của "+ number + " là :"+outputTough)
     </script>
 </body>
 </html>
